...
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_marginTop="@dimen/home_layout_margin_top"
        android:background="@drawable/white_with_black_border"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_short"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_marginTop="@dimen/home_layout_margin_top"
        android:background="@drawable/white_with_black_border"
        android:drawableStart="@android:drawable/ic_secure"
        android:drawablePadding="10dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/home_layout_margin_top"
        android:background="@drawable/medium_green_black_border"
        android:text="@string/action_login"
        android:textColor="@color/black"
...
