...
        android:layout_height="wrap_content"
        android:layout_below="@id/event_name"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/event_done_button"
        android:text="@string/event_done_button"
        android:onClick="buttonEventDoneOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/event_tags_button"
        android:layout_alignParentEnd="true"
...
