...
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="@dimen/activity_button_height"
        android:layout_marginTop="70dp"
        android:background="@drawable/light_green_black_border"
        android:text="@string/action_sign_in"
        android:textSize="@dimen/text_size_small"
...
