<resources>
    <string name="app_name">Time Since</string>

    <string name="action_settings">Settings</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>

    <string name="welcome">Welcome!</string>
    <string name="login">Login to Your Account</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Create Account</string>
    <string name="action_login">Login</string>
    <string name="event_name">Event Title</string>
    <string name="due_date">Set the due date</string>
    <string name="due_datetime">Set the due time</string>
    <string name="add_your_event">Create your Event</string>
    <string name="prompt_select_event_label">Select an Event Tag</string>
    <string name="event_label_name">Event Label:</string>
    <string name="title_activity_view_own_event">viewOwnEventActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- End of Fragment strings -->
    <string name="login_short">Login</string>
    <string name="event_done_button">Done!</string>
    <string name="event_favorite_button">Favorite</string>
    <string name="event_tag_button">Tags</string>
    <string name="date_hint">yyyy-mm-dd</string>
    <string name="single_event_hint">Give me a description!</string>
    <string name="hint_single_event_name">Replace Toothbrush</string>
    <string name="title_activity_view_own_event_list">ViewOwnEventList</string>
    <string name="create_new_label">Create New Label</string>
    <string name="save">Save</string>
    <string name="add_to_current_event">Add to current event?</string>
    <string name="create_your_label">Create Your Label</string>
    <string name="label_name">Label Name</string>
    <string name="event_description">Event description</string>
    <string name="favorite">Favorite:</string>
    <string name="due_time">Due Time</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_due_date">Sort By Due Date</string>
    <string name="sort_by_creation_date">Sort by Creation Date</string>
    <string name="show_incomplete">Show Incomplete</string>
    <string name="show_complete">Show Complete</string>
    <string name="show_favorites">Show Favorites</string>
</resources>
